# ChangeLog for net-dialup/lrzsz
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-dialup/cvs-repo/gentoo-x86/net-dialup/lrzsz/ChangeLog,v 1.20 2009/07/09 23:46:22 mrness Exp $

*lrzsz-0.12.20-r3 (09 Jul 2009)

  09 Jul 2009; Alin Năstac <mrness@gentoo.org>
  +files/lrzsz-autotools.patch, +lrzsz-0.12.20-r3.ebuild:
  Use eautoreconf (#226789).

  09 May 2009; Alin Năstac <mrness@gentoo.org> -lrzsz-0.12.20-r1.ebuild:
  Remove obsolete revision.

  29 Apr 2009; Jeroen Roovers <jer@gentoo.org> lrzsz-0.12.20-r2.ebuild:
  Stable for HPPA (bug #265708).

  19 Apr 2009; Markus Meier <maekke@gentoo.org> lrzsz-0.12.20-r2:
  amd64 stable, bug #265708

  18 Apr 2009; Raúl Porcel <armin76@gentoo.org> lrzsz-0.12.20-r2.ebuild:
  arm/ia64/s390/sh/sparc/x86 stable wrt #265708

  18 Apr 2009; nixnut <nixnut@gentoo.org> lrzsz-0.12.20-r2.ebuild:
  ppc stable #265708

  14 Apr 2009; Brent Baude <ranger@gentoo.org> lrzsz-0.12.20-r2.ebuild:
  Marking lrzsz-0.12.20-r2 ppc64 for bug 265708

  12 Apr 2009; Tobias Klausmann <klausman@gentoo.org>
  lrzsz-0.12.20-r2.ebuild:
  Stable on alpha, bug #265708

  10 Apr 2009; Alin Năstac <mrness@gentoo.org> lrzsz-0.12.20-r2.ebuild:
  Migrate to EAPI 2. Add libintl dependency atom (#263946).

  26 Jan 2009; Mike Frysinger <vapier@gentoo.org>
  files/lrzsz-implicit-decl.patch:
  Tweak decl patch so it fully works.

*lrzsz-0.12.20-r2 (11 Jan 2009)

  11 Jan 2009; Alin Năstac <mrness@gentoo.org> +lrzsz-0.12.20-r2.ebuild:
  Install manpage symlinks for all available commands (#251630).

  25 May 2008; <solar@gentoo.org> lrzsz-0.12.20-r1.ebuild:
  - cross compile fix. inherit toolchain-funcs ; tc-export CC

  29 Dec 2007; <welp@gentoo.org> lrzsz-0.12.20-r1.ebuild:
  Keyworded ~x86-fbsd; bug 202740

  14 Apr 2007; Alin Năstac <mrness@gentoo.org>
  +files/lrzsz-implicit-decl.patch, lrzsz-0.12.20-r1.ebuild:
  Fix implicit declaration warnings.
