@@ -1,19 +1,18 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-
 AUX lrzsz-autotools.patch 8516 RMD160 879a17bcbb628640bd442a7f64a0ffb061d198c4 SHA1 dff5e6e3a0a4ec236a248b5b990a029e21f0f5f5 SHA256 055b804d6f7f6158064f119bb4d16c85b1224ac6b1555fd763aea5b01d17fc5d
 AUX lrzsz-implicit-decl.patch 428 RMD160 c069897a59d8f9a92fe820ce04ed9e9f7f6372e6 SHA1 6fc1296fca908c0b02c9078a53dfd929c02c7446 SHA256 867e4dc69fc83d0f96bb46d11d44b9575106e199506cf7098be0a5d2d9e39d81
 AUX lrzsz-makefile-smp.patch 4310 RMD160 b178f42eabbb93df20fb6432b4bd563eb82e5d29 SHA1 540890e3e4138a6921555e34edfa48fd336cb085 SHA256 25deeda6864c9d8c3e5227bc85edf9bffd969657849b3f6651aea5291526783e
 DIST lrzsz-0.12.20.tar.gz 280938 RMD160 1b1776143afaff8bc7447ce998f9d3a958d51f25 SHA1 451e6a1813dfb71a412c973acd1b88b9ee3f28c4 SHA256 c28b36b14bddb014d9e9c97c52459852f97bd405f89113f30bee45ed92728ff1
 EBUILD lrzsz-0.12.20-r2.ebuild 1381 RMD160 e9ddc103c0e18709c275cddaa6186aadc695dd6d SHA1 6fd35d88e042eda59d43781e14ea0a7392bc4003 SHA256 ad5b639dc0bdd5584ad0a77bdbaeb5a93d4b8d7729c2fbdcab4131ea8fa7501b
-EBUILD lrzsz-0.12.20-r3.ebuild 1586 RMD160 0e46df9a9c50391f6b3de03bc76cfda3ddd66233 SHA1 6c5c623f03f002cf3c20f1d7765f86a2a2f112f5 SHA256 eab8bf1cec7c69a5aa730cf5ab0a49ab8496b990c3b789e842e5bbe0381e9466
-MISC ChangeLog 4668 RMD160 84dd18f7336c2425f2b6050ed2e97f42705ddaf6 SHA1 c2adfdc87453a7d3e256c67ed81000d5b75c469f SHA256 f8b3c8c299e1bb032d73c2933d752ab735cf79d92e2d6a694175d588d8f10a5d
+EBUILD lrzsz-0.12.20-r3.ebuild 1634 RMD160 105050beac58c6c175785e8d6c81d75c3a755b9b SHA1 1e0cf496f2898c6e811e7e5f9dddf1bc827aeb02 SHA256 ce94ae45f50b7269c6202508f783cc07f64763438c12a3dcccec8f48d02c7ad0
+MISC ChangeLog 4777 RMD160 00fdd9bbfe17b2f2154b5a4e59b95275c0e0ba9d SHA1 887d0108d7d2dbbfd633a4ed8002b2a25635304d SHA256 93c93fbb867235fd3d5b3630d62f30413e7dee04daf52f007556e3905345ef10
 MISC metadata.xml 364 RMD160 3b6f9305a45551cf720cf3536564b607bc7a4245 SHA1 2fa9a38249af3c0444517e380bc8d304d337eebb SHA256 64640b942a6abd1fe000c35ef52a73fe37700e8726f88e72d99e7e79aa23dda5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAkpWhGwACgkQ9A5kJBGSrsv5ggCgg+J3AL5PKtYGnU519FRC10hz
-hfYAnRugS8oAh1JmdMlSSLb+dtoEBgQQ
-=Bjln
+iEYEARECAAYFAks+L7QACgkQNQqtfCuFneP4MwCdGFNldqzJLsbyCW8FVPScwkJg
+MHIAn00BJsXvZtjpU5khsuFobLgFYA7m
+=5IQg
 -----END PGP SIGNATURE-----
