@@ -1,6 +1,10 @@
 # ChangeLog for net-dialup/lrzsz
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-dialup/cvs-repo/gentoo-x86/net-dialup/lrzsz/ChangeLog,v 1.20 2009/07/09 23:46:22 mrness Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/net-dialup/cvs-repo/gentoo-x86/net-dialup/lrzsz/ChangeLog,v 1.21 2010/01/01 17:23:57 fauli Exp $
+
+  01 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
+  lrzsz-0.12.20-r3.ebuild:
+  Transfer Prefix keywords
 
 *lrzsz-0.12.20-r3 (09 Jul 2009)
 
